--- a/inventory/templates/inventory/index.html
+++ b/inventory/templates/inventory/index.html
@@ -2,5 +2,10 @@
 {% block body %}
 
 
+        {% for item in object_list %}
+{#        <div class = 'col-sm-4 col-lg-2'>#}
+        ({ item }}
+{#        </div>#}
+
 
 {%  endblock %}
