--- a/inventory/templates/inventory/index.html
+++ b/inventory/templates/inventory/index.html
@@ -3,9 +3,9 @@
 
 
         {% for item in object_list %}
-{#        <div class = 'col-sm-4 col-lg-2'>#}
-        ({ item }}
-{#        </div>#}
+       <div class = 'col-sm-4 col-lg-2'>
+        ({ item.make_and_model }}
+        </div>
 	{% endfor %}
 
 
