--- a/inventory/templates/inventory/index.html
+++ b/inventory/templates/inventory/index.html
@@ -1,12 +1,18 @@
 {% extends 'inventory/base.html' %}
 {% block body %}
 
+<h1>Loaner Equipment</h1>
 
-        {% for item in object_list %}
-       <div class = 'col-sm-4 col-lg-2'>
-        ({ item.make_and_model }}
-        </div>
-	{% endfor %}
+        {% for item in items %}
+{#        listview stores everything in object_list, which we renamed to items.#}
+{#        <div class = 'col-sm-4 col-lg-2'>#}
+
+            <a href = "#">{{ item.make_and_model }}</a>
+{#        </div>#}
+
+
+
+        {% endfor %}
 
 
 {%  endblock %}
