--- a/inventory/templates/inventory/index.html
+++ b/inventory/templates/inventory/index.html
@@ -5,7 +5,7 @@
 
         {% for item in items %}
         {% if item.checked_out == False %}
-       <div class = 'col-sm-4 col-lg-2'>
+       <div>
 
             <a href = "#">{{ item.make_and_model }}</a>
             <ul>
@@ -41,7 +41,7 @@
 
         {% for item in items %}
         {% if item.checked_out == True %}
-        <div class = 'col-sm-4 col-lg-2'>
+        <div>
 
             <a href = "#">{{ item.make_and_model }}</a>
             <ul>
