--- a/inventory/templates/inventory/index.html
+++ b/inventory/templates/inventory/index.html
@@ -37,7 +37,7 @@
 
 	<h3>Checked Out Loaner Equipment</h3>
 
-       {% if item.checked_out == False %}
+       {% if item.checked_out == True %}
        <div>
 
             <a href = "#">{{ item.make_and_model }}</a>
