--- a/inventory/templates/inventory/index.html
+++ b/inventory/templates/inventory/index.html
@@ -1,44 +1,13 @@
 {% extends 'inventory/base.html' %}
 {% block body %}
-
+        <h3>Loaner Equipment Inventory</h3>
 
         {% for item in items %}
-        <h3>Loaner Equipment in Stock</h3>
-        {% if item.checked_out == False %}
        <div class = 'col-sm-4 col-lg-2'>
-
             <a href = "#">{{ item.make_and_model }}</a>
             <ul>
 		    <li>{{ item.label }}</li>
-		    <li>{{ item.checked_out }}</li>
-
-		</ul>
-		
-        <form action = "#" method = 'post' style = "display: inline;">
-        {% csrf_token %}
-        <input type = "hidden" name = "item_id" value = "{{item.id}}"/>
-        <button type = "submit" class = "btn btn-default btn-sm">
-          <span class = "glyphicon glyphicon-trash"></span>
-        </button>
-      </form>
-
-      <form action = "#" method = 'post' style = "display: inline;">
-      {% csrf_token %}
-      <input type = "hidden" name = "item_id" value = "{{item.id}}"/>
-      <button type = "submit" class = "btn btn-default btn-sm">
-        <span class = "glyphicon glyphicon-edit"></span>
-      </button>
-    </form>
-       {% endif %}
-
-
-
-	<h3>Checked Out Loaner Equipment</h3>
-       {% if item.checked_out == True %}
-            <a href = "#">{{ item.make_and_model }}</a>
-            <ul>
-		    <li>{{ item.label }}</li>
-		    <li>{{ item.checked_out }}</li>
+		    <li>"Checked Out: " + {{ item.checked_out }}</li>
 
 		</ul>
 		
@@ -59,7 +28,6 @@
     </form>
 
        </div>
-       {% endif %}
        {% endfor %}
 
 
