--- a/inventory/templates/inventory/index.html
+++ b/inventory/templates/inventory/index.html
@@ -7,7 +7,7 @@
             <a href = "#">{{ item.make_and_model }}</a>
             <ul>
 		    <li>{{ item.label }}</li>
-		    <li>"Checked Out: " + {{ item.checked_out }}</li>
+		    <li>Checked Out:  {{ item.checked_out }}</li>
 
 		</ul>
 		
