this prob wont work but added forms

--- a/inventory/templates/inventory/detail.html
+++ b/inventory/templates/inventory/detail.html
@@ -3,6 +3,14 @@
 {% block body %}
 
 
+<h1>{{ item.make_and_model }}</h1>
+
+<ul>
+  <li>{{ item.label }}</li>
+  <li>{{ item.notes }}</li>
+  <li>{{ item.checked_out }}</li>
+</ul>
+
 
 
 {%  endblock %}
