added Loaner buttons

--- a/inventory/templates/inventory/base.html
+++ b/inventory/templates/inventory/base.html
@@ -38,6 +38,12 @@
                 </a>
             </li>
 
+            <li class = "">
+                <a href = {% url 'inventory:loaner-add' %}>
+                    <span class = "glyphicon glyphicon-user" aria-hidden = "true"></span>&nbsp;Add New User
+                </a>
+            </li>
+
         </ul>
      </div>
     </div>
