--- a/inventory/templates/inventory/index.html
+++ b/inventory/templates/inventory/index.html
@@ -3,7 +3,7 @@
 
         {% for item in items %}
        <div class = 'col-sm-4 col-lg-2'>
-            <a href = "#">{{ item.make_and_model }}</a>
+            <a href =  "{% url 'inventory:detail' item.id %}">{{ item.make_and_model }}</a>
             <ul>
 		    <li>{{ item.label }}</li>
 		    <li>Checked Out:  {{ item.checked_out }}</li>
