--- a/inventory/templates/inventory/index.html
+++ b/inventory/templates/inventory/index.html
@@ -10,7 +10,7 @@
 
 		</ul>
 		
-        <form action = "#" method = 'post' style = "display: inline;">
+        <form action = "{% url 'inventory:item-delete' item.id %}" method = 'post' style = "display: inline;">
         {% csrf_token %}
         <input type = "hidden" name = "item_id" value = "{{item.id}}"/>
         <button type = "submit" class = "btn btn-default btn-sm">
@@ -18,7 +18,7 @@
         </button>
       </form>
 
-      <form action = "#" method = 'post' style = "display: inline;">
+      <form action = "{% url 'inventory:item-update' item.id %}" method = 'post' style = "display: inline;">
       {% csrf_token %}
       <input type = "hidden" name = "item_id" value = "{{item.id}}"/>
       <button type = "submit" class = "btn btn-default btn-sm">
