--- a/inventory/templates/inventory/index.html
+++ b/inventory/templates/inventory/index.html
@@ -12,7 +12,7 @@
 		
         <form action = "{% url 'inventory:item-delete' item.id %}" method = 'post' style = "display: inline;">
         {% csrf_token %}
-        <input type = "hidden" name = "item_id" value = "{{item.id}}"/>
+        <input type = "hidden" onclick = "return confirm('Are you sure?')" name = "item_id" value = "{{item.id}}"/>
         <button type = "submit" class = "btn btn-default btn-sm">
           <span class = "glyphicon glyphicon-trash"></span>
         </button>
