--- a/inventory/templates/inventory/index.html
+++ b/inventory/templates/inventory/index.html
@@ -2,6 +2,8 @@
 {% block body %}
 
         {% for item in items %}
+      {% if item.checked_out == False %}
+
        <div class = 'col-sm-4 col-lg-2'>
             <a href =  "{% url 'inventory:detail' item.id %}">{{ item.make_and_model }}</a>
             <ul>
@@ -12,7 +14,7 @@
 		
         <form action = "{% url 'inventory:item-delete' item.id %}" method = 'post' style = "display: inline;">
         {% csrf_token %}
-        <input type = "hidden" onclick = "return confirm('Are you sure?')" name = "item_id" value = "{{item.id}}"/>
+        <input type = "hidden" name = "item_id" value = "{{item.id}}"/>
         <button type = "submit" class = "btn btn-default btn-sm">
           <span class = "glyphicon glyphicon-trash"></span>
         </button>
@@ -27,6 +29,7 @@
     </form>
 
        </div>
+       {% endif %}
        {% endfor %}
 
 
