--- a/inventory/templates/inventory/index.html
+++ b/inventory/templates/inventory/index.html
@@ -33,4 +33,35 @@
        {% endfor %}
 
 
+        {% for item in items %}
+      {% if item.checked_out == True %}
+
+       <div class = 'col-sm-4 col-lg-2'>
+            <a href =  "{% url 'inventory:detail' item.id %}">{{ item.make_and_model }}</a>
+            <ul>
+        <li>{{ item.label }}</li>
+        <li>Checked Out:  {{ item.checked_out }}</li>
+
+    </ul>
+    
+        <form action = "{% url 'inventory:item-delete' item.id %}" method = 'post' style = "display: inline;">
+        {% csrf_token %}
+        <input type = "hidden" name = "item_id" value = "{{item.id}}"/>
+        <button type = "submit" class = "btn btn-default btn-sm">
+          <span class = "glyphicon glyphicon-trash"></span>
+        </button>
+      </form>
+
+      <form action = "{% url 'inventory:item-update' item.id %}" method = 'post' style = "display: inline;">
+      {% csrf_token %}
+      <input type = "hidden" name = "item_id" value = "{{item.id}}"/>
+      <button type = "submit" class = "btn btn-default btn-sm">
+        <span class = "glyphicon glyphicon-edit"></span>
+      </button>
+    </form>
+
+       </div>
+       {% endif %}
+       {% endfor %}
+
 {%  endblock %}
