--- a/inventory/templates/inventory/index.html
+++ b/inventory/templates/inventory/index.html
@@ -34,7 +34,7 @@
        {% endfor %}
 
 
-<div style="display: block"  float= "float: left">
+<span style="display: block"  float= "float: left">
        <h1>Checked out Equipment</h1>
         {% for item in items %}
       {% if item.checked_out == True %}
@@ -66,5 +66,5 @@
        </div>
        {% endif %}
        {% endfor %}
-</div>
+</span>
 {%  endblock %}
