--- a/inventory/templates/inventory/user_detail.html
+++ b/inventory/templates/inventory/user_detail.html
@@ -3,13 +3,7 @@
 {% block body %}
 
 
-          {% for r in result %}
-            <tr>
-              <td>
-                {{r}}
-              </td>
-            </tr>
-          {% endfor %}
+{{ result }}
 
 
 
