--- a/inventory/templates/inventory/index.html
+++ b/inventory/templates/inventory/index.html
@@ -4,8 +4,7 @@
 
         {% for item in items %}
       {% if item.checked_out == False %}
-{#        <div class = 'col-sm-4 col-lg-2'>
- #}
+
        <div>
             <a href =  "{% url 'inventory:detail' item.id %}">{{ item.make_and_model }}</a>
             <ul>
@@ -35,7 +34,7 @@
        {% endfor %}
 
 
-<span style="display: block"  float= "float: left">
+<div>
        <h1>Checked out Equipment</h1>
         {% for item in items %}
       {% if item.checked_out == True %}
@@ -69,5 +68,5 @@
        </div>
        {% endif %}
        {% endfor %}
-</span>
+</div>
 {%  endblock %}
