--- a/inventory/templates/inventory/user_detail.html
+++ b/inventory/templates/inventory/user_detail.html
@@ -3,8 +3,12 @@
 {% block body %}
 
 
-{{ result }}
+    {% for r in result %}
+<ul>
+            <li>{{r}}</li>
 
+          {% endfor %}
+</ul>
 
 
 {%  endblock %}
