--- a/inventory/templates/inventory/user_detail.html
+++ b/inventory/templates/inventory/user_detail.html
@@ -5,7 +5,7 @@
 <ul>
 
             <li>Name: {{ result.0 }}</li>
-            <li>Email: <a href = 'mailto:' + str({{result.1}})></a>{{result.1}}</li>
+            <li>Email: <a href = "mailto:" + str({{result.1}})>{{result.1}}</a></li>
             <li>Primary Affiliation: {{result.2}}</li>
 
 
