--- a/inventory/templates/inventory/in_stock.html
+++ b/inventory/templates/inventory/in_stock.html
@@ -1,18 +1,20 @@
 {% extends 'inventory/base.html' %}
 {% block body %}
+         <h1>In Stock Equipment</h1>
 
         {% for item in items %}
-       <div class = 'col-sm-4 col-lg-2'>
+
+       <div>
             <a href =  "{% url 'inventory:detail' item.id %}">{{ item.make_and_model }}</a>
             <ul>
-        <li>{{ item.label }}</li>
-        <li>Checked Out:  {{ item.checked_out }}</li>
+		    <li>{{ item.label }}</li>
+		    <li>Checked Out:  {{ item.checked_out }}</li>
 
-    </ul>
-    
+		</ul>
+		
         <form action = "{% url 'inventory:item-delete' item.id %}" method = 'post' style = "display: inline;">
         {% csrf_token %}
-        <input type = "hidden" onclick = "return confirm('Are you sure?')" name = "item_id" value = "{{item.id}}"/>
+        <input type = "hidden" name = "item_id" value = "{{item.id}}"/>
         <button type = "submit" class = "btn btn-default btn-sm">
           <span class = "glyphicon glyphicon-trash"></span>
         </button>
@@ -28,6 +30,4 @@
 
        </div>
        {% endfor %}
-
-
-{%  endblock %}
+      {%  endblock %}
