--- a/inventory/templates/inventory/index.html
+++ b/inventory/templates/inventory/index.html
@@ -7,6 +7,9 @@
             <ul>
         <li>{{ item.label }}</li>
         <li>Checked Out:  {{ item.checked_out }}</li>
+             {% for loaner in item.loaner_set.all %}
+    <li>User:<a href = "{% url 'inventory:laoner-detail' loaner.net_id %}"> {{ loaner.net_id }}</a></li>
+    {% endfor %}
 
     </ul>
     
