--- a/inventory/static/inventory/style.css
+++ b/inventory/static/inventory/style.css
@@ -10,3 +10,9 @@ body { background: #ECECEA}
     font-family: 'Raleway', serif;
     font-size: 20px;
 }
+
+
+.body { 
+
+font-family: 'Raleway', serif;
+ }
