--- a/inventory/templates/inventory/index.html
+++ b/inventory/templates/inventory/index.html
@@ -8,7 +8,7 @@
         <li>{{ item.label }}</li>
         <li>Checked Out:  {{ item.checked_out }}</li>
              {% for loaner in item.loaner_set.all %}
-    <li>User:<a href = "{% url 'inventory:laoner-detail' loaner.net_id %}"> {{ loaner.net_id }}</a></li>
+    <li>Current User:<a href = "{% url 'inventory:laoner-detail' loaner.net_id %}"> {{ loaner.net_id }}</a></li>
     {% endfor %}
 
     </ul>
