--- a/inventory/static/inventory/style.css
+++ b/inventory/static/inventory/style.css
@@ -1,8 +1,7 @@
 /*style.css*/
 
 body { background: #ECECEA;
-		font-family: 'Raleway', serif;
-		padding-left: 15px;
+		font-family: 'Roboto', sans-serif;
 }
 
 .navbar {
@@ -10,7 +9,7 @@ body { background: #ECECEA;
 }
 
 .navbar-brand {
-    font-family: 'Raleway', serif;
+    font-family: 'Muli', sans-serif;
     font-size: 20px;
 }
 
