--- a/inventory/static/inventory/style.css
+++ b/inventory/static/inventory/style.css
@@ -9,7 +9,7 @@ body { background: #ECECEA;
 }
 
 .navbar-brand {
-    font-family: 'Muli', sans-serif;
+    font-family: 'Lato', sans-serif;
     font-size: 20px;
 }
 
