--- a/inventory/templates/inventory/base.html
+++ b/inventory/templates/inventory/base.html
@@ -50,7 +50,7 @@
 
             <li class = "">
                 <a href = {% url 'inventory:loaner-add' %}>
-                    <span class = "glyphicon glyphicon-user" aria-hidden = "true"></span>&nbsp;Add New User
+                    <span class = "glyphicon glyphicon-user" aria-hidden = "true"></span>&nbsp;Add Equipment User
                 </a>
             </li>
 
