--- a/inventory/templates/inventory/in_stock.html
+++ b/inventory/templates/inventory/in_stock.html
@@ -5,7 +5,7 @@
         {% for item in items %}
 
        <div class = 'col-sm-4 col-lg-2'>
-            <a href =  "{% url 'inventory:detail' item.id %}">{{ item.make_and_model }}</a>
+            <a href =  "{% url 'inventory:detail' item.id %}" class = 'names'>{{ item.make_and_model }}</a>
             <ul>
 		    <li>{{ item.label }}</li>
 		    <li>Checked Out:  {{ item.checked_out }}</li>
@@ -15,13 +15,7 @@
 
 		</ul>
 		
-        <form action = "{% url 'inventory:item-delete' item.id %}" method = 'post' style = "display: inline;">
-        {% csrf_token %}
-        <input type = "hidden" name = "item_id" value = "{{item.id}}"/>
-        <button type = "submit" class = "btn btn-default btn-sm">
-          <span class = "glyphicon glyphicon-trash"></span>
-        </button>
-      </form>
+
 
       <form action = "{% url 'inventory:item-update' item.id %}" method = 'post' style = "display: inline;">
       {% csrf_token %}
@@ -30,6 +24,14 @@
         <span class = "glyphicon glyphicon-edit"></span>
       </button>
     </form>
+
+            <form action = "{% url 'inventory:item-delete' item.id %}" method = 'post' style = "display: inline;">
+        {% csrf_token %}
+        <input type = "hidden" name = "item_id" value = "{{item.id}}"/>
+        <button type = "submit" class = "btn btn-default btn-sm">
+          <span class = "glyphicon glyphicon-trash"></span>
+        </button>
+      </form>
 
        </div>
        {% endfor %}
