--- a/inventory/static/inventory/style.css
+++ b/inventory/static/inventory/style.css
@@ -12,3 +12,20 @@ body { background: #ECECEA;
     font-family: 'Lato', sans-serif;
     font-size: 20px;
 }
+
+/* unvisited link */
+a {
+    font-weight: bold;
+}
+
+
+/* mouse over link */
+a:hover {
+    color: green;
+}
+
+
+/*. is used for class 
+*/.name { 
+font-size: 20px;
+ }
