--- a/inventory/templates/inventory/index.html
+++ b/inventory/templates/inventory/index.html
@@ -3,7 +3,7 @@
 
         {% for item in items %}
        <div class = 'col-sm-4 col-lg-2'>
-            <a href =  "{% url 'inventory:detail' item.id %}">{{ item.make_and_model }}</a>
+            <a href =  "{% url 'inventory:detail' item.id %}" class = 'names'>{{ item.make_and_model }}</a>
             <ul>
         <li>{{ item.label }}</li>
         <li>Checked Out:  {{ item.checked_out }}</li>
@@ -13,13 +13,7 @@
 
     </ul>
     
-        <form action = "{% url 'inventory:item-delete' item.id %}" method = 'post' style = "display: inline;">
-        {% csrf_token %}
-        <input type = "hidden" onclick = "return confirm('Are you sure?')" name = "item_id" value = "{{item.id}}"/>
-        <button type = "submit" class = "btn btn-default btn-sm">
-          <span class = "glyphicon glyphicon-trash"></span>
-        </button>
-      </form>
+
 
       <form action = "{% url 'inventory:item-update' item.id %}" method = 'post' style = "display: inline;">
       {% csrf_token %}
@@ -28,6 +22,14 @@
         <span class = "glyphicon glyphicon-edit"></span>
       </button>
     </form>
+
+            <form action = "{% url 'inventory:item-delete' item.id %}" method = 'post' style = "display: inline;">
+        {% csrf_token %}
+        <input type = "hidden" onclick = "return confirm('Are you sure?')" name = "item_id" value = "{{item.id}}"/>
+        <button type = "submit" class = "btn btn-default btn-sm">
+          <span class = "glyphicon glyphicon-trash"></span>
+        </button>
+      </form>
 
        </div>
        {% endfor %}
