test page compacting

--- a/inventory/templates/inventory/base.html
+++ b/inventory/templates/inventory/base.html
@@ -44,7 +44,7 @@
         <ul class = "nav navbar-nav navbar-right">
              <li class = "">
                 <a href = {% url 'inventory:item-add' %}>
-                    <span class = "glyphicon glyphicon-plus" aria-hidden = "true"></span>&nbsp;Add Loaner Equipment
+                    <span class = "glyphicon glyphicon-plus" aria-hidden = "true"></span>&nbsp;Add Equipment
                 </a>
             </li>
 
