--- a/inventory/templates/inventory/index.html
+++ b/inventory/templates/inventory/index.html
@@ -2,36 +2,8 @@
 {% block body %}
 
         {% for item in items %}
-       <div class = 'col-sm-4 col-lg-2'>
-            <a href =  "{% url 'inventory:detail' item.id %}" class = 'name'>{{ item.make_and_model }}</a>
-            <ul>
-        <li>{{ item.label }}</li>
-        <li>Checked Out:  {{ item.checked_out }}</li>
-             {% for loaner in item.loaner_set.all %}
-    <li>Current User: <a href = "{% url 'inventory:laoner-detail' loaner.net_id %}" class = 'netid'> {{ loaner.net_id }}</a></li>
-    {% endfor %}
+        {% include 'inventory/item.html' %}
 
-    </ul>
-    
-
-
-      <form action = "{% url 'inventory:item-update' item.id %}" method = 'post' style = "display: inline;">
-      {% csrf_token %}
-      <input type = "hidden" name = "item_id" value = "{{item.id}}"/>
-      <button type = "submit" class = "btn btn-default btn-sm">
-        <span class = "glyphicon glyphicon-edit"></span>
-      </button>
-    </form>
-
-            <form action = "{% url 'inventory:item-delete' item.id %}" method = 'post' style = "display: inline;">
-        {% csrf_token %}
-        <input type = "hidden" onclick = "return confirm('Are you sure?')" name = "item_id" value = "{{item.id}}"/>
-        <button type = "submit" class = "btn btn-default btn-sm">
-          <span class = "glyphicon glyphicon-trash"></span>
-        </button>
-      </form>
-
-       </div>
        {% endfor %}
 
 
