--- a/inventory/templates/inventory/checked_out.html
+++ b/inventory/templates/inventory/checked_out.html
@@ -1,6 +1,6 @@
 {% extends 'inventory/base.html' %}
 {% block body %}
-         <h1>LOL out Equipment</h1>
+         <h1>Checked out Loaner Equipment</h1>
 
         {% for item in items %}
 
