--- a/inventory/templates/inventory/in_stock.html
+++ b/inventory/templates/inventory/in_stock.html
@@ -1,6 +1,6 @@
 {% extends 'inventory/base.html' %}
 {% block body %}
-         <h1>LOL Stock Equipment</h1>
+         <h1>Loaner Equipment in Stock</h1>
 
         {% for item in items %}
         {% include 'inventory/item.html' %}
