--- a/inventory/static/inventory/style.css
+++ b/inventory/static/inventory/style.css
@@ -10,8 +10,8 @@ body { background: #ECECEA;
 }
 
 .navbar-brand {
-    font-family: 'Lato', sans-serif;
-    font-size: 24px;
+    font-family: 'Raleway', serif;
+    font-size: 20px;
 }
 
 /* unvisited link */
