login button added

--- a/inventory/templates/inventory/base.html
+++ b/inventory/templates/inventory/base.html
@@ -54,6 +54,12 @@
                 </a>
             </li>
 
+                        <li class = "">
+                <a href = 'http://bioinventory.herokuapp.com/admin/'>
+                    <span class = "glyphicon glyphicon-log-in" aria-hidden = "true"></span>&nbsp;Login
+                </a>
+            </li>
+
         </ul>
      </div>
     </div>
