--- a/inventory/templates/inventory/item_update_form.html
+++ b/inventory/templates/inventory/item_update_form.html
@@ -18,9 +18,9 @@
                         {% csrf_token %}
                         {% for field in form %}
                     <div class="form-group">
-                        <div class="col-sm-offset-2 col-sm-10">
+{#                         <div class="col-sm-offset-2 col-sm-10">
                             <span class="text-danger small">{{ field.errors }}</span>
-                        </div>
+                        </div> #}
                         <label class="control-label col-sm-2">{{ field.label_tag }}</label>
                         <div class="col-sm-10">{{ field }}</div>
                 {#    input (empty text box^ #}
@@ -28,7 +28,7 @@
                 {% endfor %}
                         <div class="form-group">
                             <div class="col-sm-offset-2 col-sm-10">
-                                <button type="submit" class="btn btn-success">Add Item</button>
+                                <button type="submit" class="btn btn-success">Update Item</button>
                             </div>
                         </div>
                     </form>
