--- a/inventory/templates/inventory/item_update_form.html
+++ b/inventory/templates/inventory/item_update_form.html
@@ -18,9 +18,9 @@
                         {% csrf_token %}
                         {% for field in form %}
                     <div class="form-group">
-{#                         <div class="col-sm-offset-2 col-sm-10">
+                        <div class="col-sm-offset-2 col-sm-10">
                             <span class="text-danger small">{{ field.errors }}</span>
-                        </div> #}
+                        </div>
                         <label class="control-label col-sm-2">{{ field.label_tag }}</label>
                         <div class="col-sm-10">{{ field }}</div>
                 {#    input (empty text box^ #}
