--- a/inventory/templates/inventory/item.html
+++ b/inventory/templates/inventory/item.html
@@ -10,8 +10,7 @@
     </ul>
     
 
-
-      <form action = "{% url 'inventory:item-update' pk=item.id %}" method = 'post' style = "display: inline;">
+      <form action = "{% url 'inventory:item-update' item.id %}" method = 'post' style = "display: inline;">
       {% csrf_token %}
       <input type = "hidden" name = "item_id" value = "{{item.id}}"/>
       <button type = "submit" class = "btn btn-default btn-sm">
