--- a/inventory/templates/inventory/item.html
+++ b/inventory/templates/inventory/item.html
@@ -10,7 +10,7 @@
     </ul>
     
 
-      <form action = "http://bioinventory.herokuapp.com/admin/" method = 'post' style = "display: inline;">
+      <form action = "http://bioinventory.herokuapp.com/admin/inventory/item/" method = 'post' style = "display: inline;">
       {% csrf_token %}
       <input type = "hidden" name = "item_id" value = "{{item.id}}"/>
       <button type = "submit" class = "btn btn-default btn-sm">
@@ -18,7 +18,7 @@
       </button>
     </form>
 
-            <form action = "{% url 'inventory:item-delete' item.id %}" method = 'post' style = "display: inline;">
+            <form action = "http://bioinventory.herokuapp.com/admin/inventory/item/" method = 'post' style = "display: inline;">
         {% csrf_token %}
         <input type = "hidden" onclick = "return confirm('Are you sure?')" name = "item_id" value = "{{item.id}}"/>
         <button type = "submit" class = "btn btn-default btn-sm">
