--- a/inventory/templates/inventory/base.html
+++ b/inventory/templates/inventory/base.html
@@ -39,7 +39,7 @@
                 </a>
             </li>
             <li class = "">
-                <a href = {% url 'docs' %}>
+                <a href = {% url 'inventory:docs' %}>
                     <span class = "glyphicon glyphicon-book" aria-hidden = "true"></span>&nbsp;Documentation
                 </a>
             </li>
