added basic documentation with css

--- a/inventory/templates/inventory/docs.html
+++ b/inventory/templates/inventory/docs.html
@@ -4,6 +4,12 @@
 {% block body %}
 
 <div class="container-fluid">
+
+    <div class="row">
+
+        <div class="col-sm-12 col-md-7">
+            <div class="panel panel-default">
+                <div class="panel-body">
 	<h1>Biology IT Inventory Documentation</h1>
  <p>Biology IT Inventory is meant to a simple and visual way to keep track of current IT helpdesk inventory of loaner equipment. Using it properly will allow for an efficient way to check if a particular item is available without searching for it when people come to the helpdesk, and to also be in the know about which user has which item and how to get into contact with them. It is meant as a simple side assistant to our main ServiceNow CRM, which is usually inundated with other tickets. By using this application, we can know about loaner inventory in one place. 
 
@@ -23,7 +29,9 @@ To get this information in json format, simply add '?format=json' to the end of 
 </p>
 
 </div>
-
-
+</div>
+</div>
+</div>
+</div>
 
 {%  endblock %}
