--- a/inventory/templates/inventory/base.html
+++ b/inventory/templates/inventory/base.html
@@ -38,11 +38,7 @@
                     <span class = "glyphicon glyphicon-new-window" aria-hidden = "true"></span>&nbsp;Checked Out
                 </a>
             </li>
-            <li class = "">
-                <a href = {% url 'inventory:docs' %}>
-                    <span class = "glyphicon glyphicon-book" aria-hidden = "true"></span>&nbsp;Documentation
-                </a>
-            </li>
+
         </ul>
 
 
@@ -59,9 +55,15 @@
                 </a>
             </li>
 
-                        <li class = "">
+            <li class = "">
                 <a href = 'http://bioinventory.herokuapp.com/admin/'>
                     <span class = "glyphicon glyphicon-log-in" aria-hidden = "true"></span>&nbsp;Login
+                </a>
+            </li>
+
+            <li class = "">
+                <a href = {% url 'inventory:docs' %}>
+                    <span class = "glyphicon glyphicon-book" aria-hidden = "true"></span>&nbsp;Docs
                 </a>
             </li>
 
