--- a/inventory/templates/inventory/base.html
+++ b/inventory/templates/inventory/base.html
@@ -57,7 +57,7 @@
 
             <li class = "">
                 <a href = {% url 'inventory:docs' %}>
-                    <span class = "glyphicon glyphicon-book" aria-hidden = "true"></span>&nbsp;Docs
+                    <span class = "glyphicon glyphicon-book" aria-hidden = "true"></span>&nbsp;Documentation
                 </a>
             </li>
 
