added links to docs

--- a/inventory/templates/inventory/docs.html
+++ b/inventory/templates/inventory/docs.html
@@ -20,8 +20,8 @@ Here's some information on the simple REST API functionality this application ca
 
 
  	<ul>
- 		<li>The request URL for all in stock items is simply: http://bioinventory.herokuapp.com/in-stock/</li>
- 		<li>The request URL for all out of stock/checked out items is accordingly: http://bioinventory.herokuapp.com/checked-out/</li>
+ 		<li>The request URL for all in stock items is simply: <a href = 'http://bioinventory.herokuapp.com/in-stock/'>http://bioinventory.herokuapp.com/in-stock/</a></li>
+ 		<li>The request URL for all out of stock/checked out items is accordingly: <a href = 'http://bioinventory.herokuapp.com/checked-out/'>http://bioinventory.herokuapp.com/checked-out/</a></li>
  	</ul>
 
 To get this information in json format, simply add '?format=json' to the end of the above request URLs. 
